fixed the glitch where the carousel indicators would create whitespace on the right of the page.

--- a/style.less
+++ b/style.less
@@ -505,7 +505,9 @@ p.meta {
         }
     }
     .carousel-indicators {
-        left:90%;
+        left:inherit;
+        right:40px;
+        width:auto;
 
         li {
             background-color: #cbcac9;
